--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
+  "theme_color": "rgb(254, 98, 39, 255)",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
